# litrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
SPECS/: rust-litrs-0.2.3.spec
examples/procmacro/: Cargo.toml  README.md
examples/procmacro/examples/: main.rs
examples/procmacro/src/: lib.rs
src/: err.rs  escape.rs  impls.rs  lib.rs  parse.rs  test_util.rs  tests.rs
src/bool/: mod.rs  tests.rs
src/byte/: mod.rs  tests.rs
src/bytestr/: mod.rs  tests.rs
src/char/: mod.rs  tests.rs
src/cstr/: mod.rs  tests.rs
src/float/: mod.rs  tests.rs
src/integer/: mod.rs  tests.rs
src/printing/: mod.rs  tests.rs
src/string/: mod.rs  tests.rs
src/tests/: mod.rs
